# PyCC2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUG_FIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_IMAGE_OPTIMIZATION_REPORT.md  IMAGE_OPTIMIZATION_COMPLETE.md  IMAGE_OPTIMIZATION_COMPLETION_SUMMARY.md  IMAGE_OPTIMIZATION_FINAL_SUMMARY.md  IMAGE_OPTIMIZATION_SUCCESS.md  INSTALL.md  INSTALL_ja.md  INSTALL_zh.md  LICENSE  MANUAL_ja.md  MANUAL_zh.md  NEW_BUG_FIX_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  README_ja.md  README_zh.md  REAL_BUG_FIX_REPORT.md  SKILL.md  USER_MANUAL.md  USER_MANUAL_ja.md  USER_MANUAL_zh.md  VISUAL_OPTIMIZATION_README.md  bandit.yaml  debug_deploy.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  screenshot_real_game.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
config/: cc2_color_palette.py  engine.toml  logging.conf  rendering_features.py  secrets.toml.example
data/maps/: _schema.json  aalsmeer_flank.json  arnhem.json  arnhem.json.backup  arnhem_best.json  arnhem_bridge.json  arnhem_koepel.json  arnhem_rail_bridge.json  arnhem_railway_bridge.json  arnhem_st_elizabeth.json  arnhem_streets.json  arnhem_suburbs.json  arnhem_tree_road.json  arnhem_west_approach.json  arnhem_zoo.json  best_village.json  bridge_assault.json  bridge_assault.json.backup  defense_line.json  defense_line.json.backup  devils_hill.json  driel_ferry.json  driel_landing_zone.json  driel_polish_crossing.json  eindhoven_city.json  eindhoven_suburbs.json  grave.json  grave.json.backup  grave_bridge.json  groesbeek_heights.json  hartenstein_hotel.json  hell_highway.json  honinghutie_road.json  koevering_crossroads.json  maas_waal_canal.json  meijel_woods.json  molenhoek_ridge.json  mook_woods.json  nederweert_canal.json  night_map.json  (+34 more)
data/scenarios/: _schema.json  arnhem_bridge_day1.json  arnhem_lz.json  corridor_defense.json  eindhoven_corridor.json  eindhoven_linkup.json  nijmegen_bridge.json  nijmegen_bridge_assault.json  nijmegen_landing.json  oosterbeek_perimeter.json  veghel_defense.json  waal_crossing.json
data/units/: _schema.json  rifle_squad_us.json
docs/: ADD.md  ASSESSMENT_D12_MATURITY.md  ASSESSMENT_D14_MATURITY.md  ASSESSMENT_D7_MATURITY.md  ASSESSMENT_D9_MATURITY.md  ASSESSMENT_GODCLASS_V045.md  ASSESSMENT_GODCLASS_V050.md  CC2_GAP_ANALYSIS_AND_PLAN.md  CC2_VISUAL_STANDARDS.md  COVERAGE_IMPROVEMENT_PLAN.md  D6_D7_MATURITY_ROADMAP.md  D8_REMEDIATION_PLAN.md  DATA_DESIGN.md  DESIGN.md  DEVSQUAD_CRITICAL_REVIEW.md  DEVSQUAD_REVIEW.md  DIFFICULTY_CURVE.md  E2E_VALIDATION_REPORT_v0315.md  GAP_ANALYSIS.md  GAP_CLOSURE_PLAN.md  IMAGE_OPTIMIZATION_GUIDE.md  IMPROVEMENT_PLAN_V070.md  INTEGRATION_EXECUTION_PLAN.md  ISOMETRIC_ARCHITECTURE_PROPOSAL.md  ISSUES.md  OPTIMIZATION_PLAN_v0322.md  P0_P1_FIX_PLAN.md  P2_P3_FIX_PLAN.md  P3_CC2_FIDELITY_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE2_LARGE_FILE_SPLIT_PLAN.md  PHASE2_UI_PORTRAIT_ARCHITECTURE.md  PHASE4_5_DESIGN.md  PHASE5_PORTRAIT_UI_INTEGRATION.md  PRD.md  PROJECT_ASSESSMENT_v0.6.10.md  PROJECT_ASSESSMENT_v0.6.6.md  PROJECT_ASSESSMENT_v0.6.6_r2.md  PROJECT_ASSESSMENT_v0.6.7.md  PROJECT_STATUS.md  (+41 more)
docs/archive/: ASSESSMENT_D12_MATURITY.md  ASSESSMENT_D13_MATURITY.md  ASSESSMENT_D7_MATURITY.md  ASSESSMENT_D8_MATURITY.md  ASSESSMENT_D9_MATURITY.md  ASSESSMENT_GODCLASS_V045.md  ASSESSMENT_GODCLASS_V046.md  ASSESSMENT_GODCLASS_V090.md  ASSESSMENT_M4_V0411.md  ASSESSMENT_TD026_V047.md  CONSENSUS_V090_WAVE_B.md  CONSENSUS_V090_WAVE_B_REV.md  COVERAGE_IMPROVEMENT_PLAN.md  D8_REMEDIATION_PLAN.md  FEATURE_EXPANSION_ROADMAP_v0.3.16.md  FIX_PLAN_GAMEPLAY_ISSUES.md  GAP_ANALYSIS_v0.6.10.md  P2_P3_FIX_PLAN.md  PHASE3_PORTRAIT_TECHNICAL_SPEC.md  PROJECT_ASSESSMENT_v0.6.10.md  PROJECT_ASSESSMENT_v0.6.5.md  ROADMAP_TD073_078.md  ROADMAP_v0.7.1.md  ROADMAP_v0.7.3.md  ROADMAP_v0.7.6.md  TD-COV-BUG_FIX_PLAN.md  v0.4.6_PLAN.md  v0.4.7_PLAN.md  v0.4.8_PLAN.md
docs/assets/: WWII_UNIT_DESIGN_REFERENCE.md
docs/postmortem/: 2026-07-13_文档滞后根因分析.md
saves/: .gitkeep  achievements.json
scripts/: check_doc_consistency.sh  convert_cc2_map.py  create_cc2_style_sprites.py  debug_sprite_init.py  download_cc2_from_github.py  download_cc2_resources.py  download_pixvoxel_assets.py  e2e_advanced_game_test.py  e2e_audio_test.py  e2e_real_game_test.py  e2e_smoke_test.py  e2e_v031_visual_test.py  e2e_v034_ghost_feature_test.py  e2e_visual_test.py  expand_maps_phase_a1.py  extract_cc2_assets.py  extract_cc2_resources.py  gen_campaign_maps.py  gen_historical_maps.py  gen_test_map.py  generate_historical_maps.py  generate_new_maps.py  isometric_demo.py  profile_renderer.py  run_and_capture.py  smoke_test_screenshots.py  strict_e2e_journey.py  test_bug_fixes.py  test_defeat_bug_fix.py  test_png_loading.py  test_real_fixes.py  test_sprite_loading.py  test_visual_e2e.py  test_visual_optimization.py  update_perf_baseline.py  validate_isometric.py  verify_png_in_game.py  verify_real_maps.py  verify_save_load.py  visual_demo.py  (+2 more)
scripts/archive/: README.md  convert_cc2_map.py  download_cc2_resources.py  extract_cc2_resources.py  gen_historical_maps.py  profile_renderer.py  verify_real_maps.py  verify_save_load.py  visual_verification.py
src/pycc2/: __init__.py  main.py
tests/: conftest.py
tests/_archive/: test_cc2_hud.py  test_enhanced_ui_renderer.py
tests/acceptance/: README.md  test_phase_a.py
tests/benchmark/: .baseline_results.json  PERF_THRESHOLDS.md  perf_baseline.json  test_fps_baseline.py  test_perf_benchmark.py  test_performance.py  test_performance_baseline.py
tests/e2e/: E2E_REAL_USER_SCENARIOS.md  __init__.py  conftest.py  test_ai_behaviors_e2e.py  test_ai_integration_e2e.py  test_battle_flow_e2e.py  test_campaign_flow_e2e.py  test_campaign_ui_e2e.py  test_combat_e2e.py  test_comprehensive_acceptance.py  test_deployment_e2e.py  test_e2e_full_coverage.py  test_full_customer_journey.py  test_full_user_journey.py  test_game_run_60s_e2e.py  test_game_settings_e2e.py  test_infantry_rendering_e2e.py  test_interactive_smoke.py  test_save_load_e2e.py  (+13 more)
(+657 files in other folders)
