[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycc2"
version = "0.4.0"
description = "PyCC2 - Python Close Combat 2: Tactical Infantry Combat Simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PyCC2 Team"}
]
keywords = ["game", "tactical", "combat-simulator", "wargame", "infantry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "pygame>=2.2",
    "numpy>=1.26",
    "pydantic>=2.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-randomly>=3.15",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "freezegun>=1.4",
    "scipy>=1.12",
    "hypothesis>=6.100",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=1.3",
]

[project.scripts]
pycc2 = "pycc2.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "E402",   # module level import not at top of file (TYPE_CHECKING pattern)
    "N802",   # function name should be lowercase (PRESET_EASY factory pattern)
    "N806",   # variable name should be lowercase (math constants like PI)
    "N817",   # camelcase import as constant (PD for PaletteData etc)
    "N814",   # camelcase import as constant
    "N812",   # lowercase import as constant
    "SIM102", # nested if statements (often more readable)
    "SIM105", # use contextlib.suppress (try/except/pass is clearer)
    "SIM117", # merge with statements (sometimes separate is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "F821", "N801", "B007"]  # allow assert, TYPE_CHECKING refs, test class naming, and unused loop vars in tests
"scripts/*" = ["F401", "F821", "N801"]  # scripts have conditional imports and test-style naming

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
# namespace_packages removed — causes "source file found twice" error with src/ layout
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "numpy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*", "py7zr", "AppKit"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --timeout=300"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:hmac",
]
markers = [
    "unit: marks tests as unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks performance benchmark tests",
]
log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src/pycc2"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
